# Qrux

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  book.toml  docker-compose.yml  proxy.toml
.github/workflows/: ci.yml  docker.yml  pages.yml
docker/: dockerhub-overview.md  proxy.toml.example
docs/src/: SUMMARY.md  architecture.md  configuration.md  introduction.md  metrics.md  production.md  quick-start.md  security.md
examples/: basic.toml  echo_client.rs
scripts/: gen-certs.sh  test-proxy.sh
src/: config.rs  https_fallback.rs  lib.rs  main.rs  metrics.rs  proxy.rs  router.rs  server.rs  upstream.rs
tests/: integration.rs
