[package]
name = "qrux"
version = "0.1.1"
edition = "2021"
description = "Qrux — a QUIC/HTTP3 terminating proxy to TCP backends"
license = "MIT"
readme = "README.md"
repository = "https://github.com/dedsecrattle/Qrux"
homepage = "https://dedsecrattle.github.io/Qrux/"
documentation = "https://dedsecrattle.github.io/Qrux/"
keywords = ["quic", "http3", "proxy", "h3", "reverse-proxy"]
categories = ["network-programming", "web-programming"]

[lib]
name = "qrux"
path = "src/lib.rs"

[[bin]]
name = "qrux"
path = "src/main.rs"

[[example]]
name = "echo_client"
path = "examples/echo_client.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "net", "sync", "time", "signal"] }

# QUIC + HTTP/3
quinn = "0.11.7"
h3 = "0.0.8"
h3-quinn = "0.0.10"
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs", "std"] }
rustls-pemfile = "2"

# HTTP types
http = "1"
bytes = "1"

# Config + CLI
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"

# Metrics
prometheus = "0.13"
lazy_static = "1.4"

# HTTPS fallback for Alt-Svc discovery
tokio-rustls = "0.26"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }
http-body-util = "0.1"

[dev-dependencies]
rcgen = "0.13"
tokio-test = "0.4"
futures = "0.3"

[profile.release]
lto = true
codegen-units = 1
